Updated registration